build/log/idf_py_stdout_output_43098
Command: ninja all
[0/12] Performing build step for 'esp_tee'
ninja: no work to do.
[2/12] No install step for 'esp_tee'
[3/12] Performing build step for 'bootloader'
[1/1] cd /home/max/esp/tee_server_auth/build/bootloader && /home/max/.espressif/python_env/idf6.1_py3.12_env/bin/python /home/max/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/max/esp/tee_server_auth/build/bootloader/bootloader.bin
Bootloader binary size 0x6070 bytes. 0x1f90 bytes (25%) free.
[4/12] Completed 'esp_tee'
[5/12] No install step for 'bootloader'
[6/12] Completed 'bootloader'
[7/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj 
/home/max/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20251204/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-2210-gf621cc4fff\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DMBEDTLS_MAJOR_VERSION=4 -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -DTF_PSA_CRYPTO_USER_CONFIG_FILE=\"mbedtls/esp_config.h\" -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/max/esp/tee_server_auth/build/secure_service_headers -I/home/max/esp/tee_server_auth/build/config -I/home/max/esp/tee_server_auth/main -I/home/max/esp/esp-idf/components/esp_libc/platform_include -I/home/max/esp/esp-idf/components/freertos/config/include -I/home/max/esp/esp-idf/components/freertos/config/include/freertos -I/home/max/esp/esp-idf/components/freertos/config/riscv/include -I/home/max/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/max/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/max/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/max/esp/esp-idf/components/freertos/esp_additions/include -I/home/max/esp/esp-idf/components/esp_hw_support/include -I/home/max/esp/esp-idf/components/esp_hw_support/include/soc -I/home/max/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/max/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/max/esp/esp-idf/components/esp_hw_support/etm/include -I/home/max/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/max/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/max/esp/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/max/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/max/esp/esp-idf/components/esp_hw_support/modem/include -I/home/max/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/max/esp/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/max/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/max/esp/esp-idf/components/heap/include -I/home/max/esp/esp-idf/components/heap/tlsf -I/home/max/esp/esp-idf/components/log/include -I/home/max/esp/esp-idf/components/soc/include -I/home/max/esp/esp-idf/components/soc/esp32c6 -I/home/max/esp/esp-idf/components/soc/esp32c6/include -I/home/max/esp/esp-idf/components/soc/esp32c6/register -I/home/max/esp/esp-idf/components/hal/platform_port/include -I/home/max/esp/esp-idf/components/hal/esp32c6/include -I/home/max/esp/esp-idf/components/hal/include -I/home/max/esp/esp-idf/components/esp_rom/include -I/home/max/esp/esp-idf/components/esp_rom/esp32c6/include -I/home/max/esp/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/home/max/esp/esp-idf/components/esp_rom/esp32c6 -I/home/max/esp/esp-idf/components/esp_common/include -I/home/max/esp/esp-idf/components/esp_system/include -I/home/max/esp/esp-idf/components/esp_system/port/soc -I/home/max/esp/esp-idf/components/esp_system/port/include/riscv -I/home/max/esp/esp-idf/components/esp_system/port/include/private -I/home/max/esp/esp-idf/components/esp_stdio/include -I/home/max/esp/esp-idf/components/riscv/include -I/home/max/esp/esp-idf/components/esp_hal_gpio/include -I/home/max/esp/esp-idf/components/esp_hal_gpio/esp32c6/include -I/home/max/esp/esp-idf/components/esp_hal_usb/include -I/home/max/esp/esp-idf/components/esp_hal_usb/esp32c6/include -I/home/max/esp/esp-idf/components/esp_hal_pmu/include -I/home/max/esp/esp-idf/components/esp_hal_pmu/esp32c6/include -I/home/max/esp/esp-idf/components/esp_hal_ana_conv/include -I/home/max/esp/esp-idf/components/esp_hal_ana_conv/esp32c6/include -I/home/max/esp/esp-idf/components/esp_hal_dma/include -I/home/max/esp/esp-idf/components/esp_hal_dma/esp32c6/include -I/home/max/esp/esp-idf/components/lwip/include -I/home/max/esp/esp-idf/components/lwip/include/apps -I/home/max/esp/esp-idf/components/lwip/lwip/src/include -I/home/max/esp/esp-idf/components/lwip/port/include -I/home/max/esp/esp-idf/components/lwip/port/freertos/include -I/home/max/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/max/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/max/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/max/esp/esp-idf/components/esp_wifi/include -I/home/max/esp/esp-idf/components/esp_wifi/include/local -I/home/max/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/max/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/max/esp/esp-idf/components/esp_event/include -I/home/max/esp/esp-idf/components/esp_phy/include -I/home/max/esp/esp-idf/components/esp_phy/esp32c6/include -I/home/max/esp/esp-idf/components/esp_netif/include -I/home/max/esp/esp-idf/components/nvs_flash/include -I/home/max/esp/esp-idf/components/esp_partition/include -I/home/max/esp/esp-idf/components/esp_blockdev/include -I/home/max/esp/esp-idf/components/mbedtls/port/include -I/home/max/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/max/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/max/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/core -I/home/max/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/builtin/src -I/home/max/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/max/esp/esp-idf/components/mbedtls/port/psa_driver/include -I/home/max/esp/esp-idf/components/esp_security/include -I/home/max/esp/esp-idf/components/esp_hal_security/esp32c6/include -I/home/max/esp/esp-idf/components/esp_hal_security/include -I/home/max/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/include -I/home/max/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/builtin/include -I/home/max/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/everest/include -I/home/max/esp/esp-idf/components/mbedtls/mbedtls/tf-psa-crypto/drivers/p256-m -I/home/max/esp/esp-idf/components/esp_driver_gpio/include -I/home/max/esp/esp-idf/components/esp_tee/include -I/home/max/esp/tee_server_auth/components/server_auth_service/include @"/home/max/esp/tee_server_auth/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/max/esp/tee_server_auth=. -fmacro-prefix-map=/home/max/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj -c /home/max/esp/tee_server_auth/main/app_main.c
In file included from /home/max/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:66,
                 from /home/max/esp/tee_server_auth/main/app_main.c:31:
/home/max/esp/tee_server_auth/main/app_main.c: In function 'led_blink_task':
/home/max/esp/tee_server_auth/main/app_main.c:67:25: error: 'CONFIG_EXAMPLE_BLINK_PERIOD_MS' undeclared (first use in this function)
   67 | #define BLINK_PERIOD_MS CONFIG_EXAMPLE_BLINK_PERIOD_MS
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/max/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/projdefs.h:46:81: note: in definition of macro 'pdMS_TO_TICKS'
   46 |     #define pdMS_TO_TICKS( xTimeInMs )    ( ( TickType_t ) ( ( ( TickType_t ) ( xTimeInMs ) * ( TickType_t ) configTICK_RATE_HZ ) / ( TickType_t ) 1000U ) )
      |                                                                                 ^~~~~~~~~
/home/max/esp/tee_server_auth/main/app_main.c:161:34: note: in expansion of macro 'BLINK_PERIOD_MS'
  161 |         vTaskDelay(pdMS_TO_TICKS(BLINK_PERIOD_MS));
      |                                  ^~~~~~~~~~~~~~~
/home/max/esp/tee_server_auth/main/app_main.c:67:25: note: each undeclared identifier is reported only once for each function it appears in
   67 | #define BLINK_PERIOD_MS CONFIG_EXAMPLE_BLINK_PERIOD_MS
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/max/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/projdefs.h:46:81: note: in definition of macro 'pdMS_TO_TICKS'
   46 |     #define pdMS_TO_TICKS( xTimeInMs )    ( ( TickType_t ) ( ( ( TickType_t ) ( xTimeInMs ) * ( TickType_t ) configTICK_RATE_HZ ) / ( TickType_t ) 1000U ) )
      |                                                                                 ^~~~~~~~~
/home/max/esp/tee_server_auth/main/app_main.c:161:34: note: in expansion of macro 'BLINK_PERIOD_MS'
  161 |         vTaskDelay(pdMS_TO_TICKS(BLINK_PERIOD_MS));
      |                                  ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
